--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/react-table.css">
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/search.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -27,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Reddit Comment Search</title>
   </head>
   <body>
     <noscript>
